tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__256kComponent-AAAAAAAAAAAAAAAAAAAJoA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2464,
  "prerequisites": [
    1014,
    2463
  ],
  "properties": {
    "auto_claim": false,
    "desc": "They work the same as the previous ones, but hold more once you make it into something.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "256k Component",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1014,
    2463
  ],
  "rewards": [],
  "tasks": []
}
