tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__256kEssentiaStor-s2TL3i06Tb2WvPvdt1utyg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3259002757576371658,
  "prerequisites": [
    7137715115393587495
  ],
  "properties": {
    "auto_claim": false,
    "desc": "These hold 524,288 units of essentia.\n\nAnd can hold 24 types.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "256k Essentia Storage Cell",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    7137715115393587495
  ],
  "rewards": [],
  "tasks": []
}
